practical part of encoding

--- a/Encoding in preprocessing/encoding_in_ML.ipynb
+++ b/Encoding in preprocessing/encoding_in_ML.ipynb
@@ -219,6 +219,397 @@
     "\n",
     "display(Image(\"encoding methods for categorical data.png\", width=500, height=300))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba3928f0-f696-42e0-a810-f7ac7c5bbcae",
+   "metadata": {},
+   "source": [
+    "### <b style=\"color:yellow\">Performing Oridinal Encoding "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "ebeb51bc-e27e-4ae2-8860-f831cba720a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "d286077a-db2e-43f5-988b-331aa28adaf6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = pd.read_csv(\"Employee_Skill_Dataset.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "5e18b9d2-df2a-4aeb-9049-cd00edb91655",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Employee_ID</th>\n",
+       "      <th>Experience_Level</th>\n",
+       "      <th>Education</th>\n",
+       "      <th>Performance</th>\n",
+       "      <th>Promotion</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>101</td>\n",
+       "      <td>Beginner</td>\n",
+       "      <td>High School</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>102</td>\n",
+       "      <td>Intermediate</td>\n",
+       "      <td>Bachelor</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>103</td>\n",
+       "      <td>Advanced</td>\n",
+       "      <td>Master</td>\n",
+       "      <td>High</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>104</td>\n",
+       "      <td>Beginner</td>\n",
+       "      <td>Bachelor</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>105</td>\n",
+       "      <td>Advanced</td>\n",
+       "      <td>PhD</td>\n",
+       "      <td>High</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>106</td>\n",
+       "      <td>Intermediate</td>\n",
+       "      <td>Master</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>107</td>\n",
+       "      <td>Beginner</td>\n",
+       "      <td>High School</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>108</td>\n",
+       "      <td>Advanced</td>\n",
+       "      <td>PhD</td>\n",
+       "      <td>High</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>109</td>\n",
+       "      <td>Intermediate</td>\n",
+       "      <td>Bachelor</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>110</td>\n",
+       "      <td>Advanced</td>\n",
+       "      <td>Master</td>\n",
+       "      <td>High</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Employee_ID Experience_Level    Education Performance Promotion\n",
+       "0          101         Beginner  High School         Low        No\n",
+       "1          102     Intermediate     Bachelor      Medium        No\n",
+       "2          103         Advanced       Master        High       Yes\n",
+       "3          104         Beginner     Bachelor      Medium        No\n",
+       "4          105         Advanced          PhD        High       Yes\n",
+       "5          106     Intermediate       Master      Medium       Yes\n",
+       "6          107         Beginner  High School         Low        No\n",
+       "7          108         Advanced          PhD        High       Yes\n",
+       "8          109     Intermediate     Bachelor      Medium        No\n",
+       "9          110         Advanced       Master        High       Yes"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f6aafc9-1f0c-438c-9488-b086c0ebd89b",
+   "metadata": {},
+   "source": [
+    "#### Idenifying the type of data \n",
+    "    Experience_Level ------> Ordinal Data (recommend ordinal encoder)\n",
+    "    Education        ------> Ordinal Data (recommend ordinal encoder)\n",
+    "    Performance      ------> Ordinal Data (recommend ordinal encoder)\n",
+    "    Promotion        ------> Ordinal Data (recommend label encoder)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "42c30f38-46f9-4f48-8b5d-118bd2981c40",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.]\n",
+      " [1.]\n",
+      " [2.]\n",
+      " [1.]\n",
+      " [3.]\n",
+      " [2.]\n",
+      " [0.]\n",
+      " [3.]\n",
+      " [1.]\n",
+      " [2.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import OrdinalEncoder\n",
+    "\n",
+    "# create encoder object\n",
+    "oe = OrdinalEncoder(categories=[['High School', 'Bachelor', 'Master', 'PhD']])\n",
+    "\n",
+    "# select Education column properly (2D)\n",
+    "X = oe.fit_transform(dataset.iloc[:, [-3]])\n",
+    "\n",
+    "print(X)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "a1171923-0199-4a3e-869a-afcb433ba966",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Employee_ID  Experience_Level  Education  Performance Promotion\n",
+      "0          101               0.0        0.0          0.0        No\n",
+      "1          102               1.0        1.0          1.0        No\n",
+      "2          103               2.0        2.0          2.0       Yes\n",
+      "3          104               0.0        1.0          1.0        No\n",
+      "4          105               2.0        3.0          2.0       Yes\n",
+      "5          106               1.0        2.0          1.0       Yes\n",
+      "6          107               0.0        0.0          0.0        No\n",
+      "7          108               2.0        3.0          2.0       Yes\n",
+      "8          109               1.0        1.0          1.0        No\n",
+      "9          110               2.0        2.0          2.0       Yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for multiple columns \n",
+    "\n",
+    "education_order = [\"High School\", \"Bachelor\", \"Master\", \"PhD\"]\n",
+    "experience_order = [\"Beginner\", \"Intermediate\", \"Advanced\"]\n",
+    "performance_order = [\"Low\", \"Medium\", \"High\"]\n",
+    "\n",
+    "oe = OrdinalEncoder(categories=[\n",
+    "    education_order,\n",
+    "    experience_order,\n",
+    "    performance_order\n",
+    "])\n",
+    "\n",
+    "dataset[[\"Education\", \"Experience_Level\", \"Performance\"]] = oe.fit_transform(\n",
+    "    dataset[[\"Education\", \"Experience_Level\", \"Performance\"]]\n",
+    ")\n",
+    "\n",
+    "print(dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "037603d5-2581-4d9c-be73-c8bf0264b6b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array(['High School', 'Bachelor', 'Master', 'PhD'], dtype=object),\n",
+       " array(['Beginner', 'Intermediate', 'Advanced'], dtype=object),\n",
+       " array(['Low', 'Medium', 'High'], dtype=object)]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "oe.categories_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0ce2237-8277-400d-be44-3606e20c581b",
+   "metadata": {},
+   "source": [
+    "### <b style=\"color:yellow\"> Performing Label Encoder on Target variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "6c18c6e9-db26-466e-ab16-3774caafb9b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Employee_ID  Experience_Level  Education  Performance  Promotion\n",
+      "0          101               0.0        0.0          0.0          0\n",
+      "1          102               1.0        1.0          1.0          0\n",
+      "2          103               2.0        2.0          2.0          1\n",
+      "3          104               0.0        1.0          1.0          0\n",
+      "4          105               2.0        3.0          2.0          1\n",
+      "5          106               1.0        2.0          1.0          1\n",
+      "6          107               0.0        0.0          0.0          0\n",
+      "7          108               2.0        3.0          2.0          1\n",
+      "8          109               1.0        1.0          1.0          0\n",
+      "9          110               2.0        2.0          2.0          1\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder \n",
+    "\n",
+    "# object to LabelEncoder\n",
+    "le = LabelEncoder() \n",
+    "\n",
+    "dataset[\"Promotion\"] = le.fit_transform(dataset[\"Promotion\"]) \n",
+    "\n",
+    "print(dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "f73a55fe-ec87-4a16-99bc-40400d443dd3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset.to_csv(\"after proper encoding.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a296acaa-ca61-41a6-8b1e-23587f111ca7",
+   "metadata": {},
+   "source": [
+    "### <b style=\"color:yellow\"> Important points to be remember"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adf29b4d-97ce-49a4-9225-fc945ea00e2e",
+   "metadata": {},
+   "source": [
+    "    Always identify whether the column is categorical or numerical before encoding.\n",
+    "    \n",
+    "    Check whether categorical data is nominal (no order) or ordinal (has order).\n",
+    "    \n",
+    "    Use OneHotEncoder for nominal feature columns.\n",
+    "    \n",
+    "    Use OrdinalEncoder for ordinal feature columns.\n",
+    "    \n",
+    "    Use LabelEncoder only for the target column, not for input feature columns.\n",
+    "    \n",
+    "    Always provide correct order of categories manually when using OrdinalEncoder.\n",
+    "    \n",
+    "    Categories in OrdinalEncoder must be passed as a list of lists.\n",
+    "    \n",
+    "    The order of categories must match the logical ranking of the data.\n",
+    "    \n",
+    "    Always pass 2D input to OrdinalEncoder and OneHotEncoder, not 1D.\n",
+    "    \n",
+    "    Select columns using double brackets dataset[['column']] instead of single brackets.\n",
+    "    \n",
+    "    When encoding multiple columns, ensure categories order matches column order.\n",
+    "    \n",
+    "    Always fit encoder on training data and transform test data, not fit on test data.\n",
+    "    \n",
+    "    Encoding converts text data into numerical format so ML models can understand it.\n",
+    "    \n",
+    "    Machine learning algorithms cannot work directly with text data.\n",
+    "    \n",
+    "    OneHotEncoder creates separate binary columns for each category.\n",
+    "    \n",
+    "    OrdinalEncoder assigns numeric values based on category order.\n",
+    "    \n",
+    "    LabelEncoder assigns numeric labels to target classes.\n",
+    "    \n",
+    "    Always verify encoded output using print() or dataset.head().\n",
+    "    \n",
+    "    Save encoder using pickle or joblib for future predictions.\n",
+    "    \n",
+    "    Encoding is an important step in the data preprocessing pipeline before model training."
+   ]
   }
  ],
  "metadata": {
